--- a/client/src/styles/homepage.css
+++ b/client/src/styles/homepage.css
@@ -82,6 +82,7 @@
 
 .category.text-center{
   margin-top: 80px;
+  font-weight: bold;
 }
 
 .category.row.container{
@@ -90,7 +91,14 @@
 }
 
 .card-category{
-  border-color: #000000;
+  border: 1px solid #6c6b6b;
+  border-radius: 10px;
+  transition: transform 0.2s;
+  
+}
+
+.card-category:hover {
+  transform: scale(1.05);
 }
 
 
