--- a/client/src/styles/homepage.css
+++ b/client/src/styles/homepage.css
@@ -1,3 +1,7 @@
+.category.col-md-9{
+  margin-top: 10px;
+}
+
 .category.centered-text{
   text-align: center;
   font-weight: bold;
@@ -120,8 +124,9 @@
 }
 
 .all-text{
-  margin-top: 59px;
+  margin-top: 70px;
   text-align: center;
+  font-weight: 500;
 }
 
 .d-flex.flex-wrap{
