--- a/client/src/styles/homepage.css
+++ b/client/src/styles/homepage.css
@@ -1,3 +1,11 @@
+.category.card-title {
+  font-size: 14px;
+}
+
+.navbar.filter {
+  display: none;
+}
+
 .category.col-md-9 {
   margin-top: 10px;
 }
@@ -66,12 +74,17 @@
 }
 
 .category.card.m-2 {
-  height: 300px;
+  height: 280px;
 }
 
+/* .category.card.m-2 .btn {
+  margin-bottom: 600px;
+} */
+
 .details.btn.btn-info.ms-1 {
-  height: 30px;
-  font-size: 15px;
+  width: 140px;
+  height: 28px;
+  font-size: 12px;
 }
 
 .category.text-center {
@@ -107,6 +120,7 @@
 
 .main-container {
   margin-left: 25%;
+  margin-top: 70px;
 }
 
 .all-text {
@@ -176,6 +190,10 @@
   transition: transform 0.3s;
 }
 
+.card.m-2 .card-title {
+  font-size: 14px;
+}
+
 .card.m-2:hover {
   transform: scale(1.05);
 }
@@ -183,6 +201,21 @@
 .card.m-2 img {
   max-width: 100%;
   height: auto;
+}
+
+.card.m-2 .btn-more.btn-dark.ms-1,
+.card.m-2 .btn-more.btn-info.ms-1 {
+  border-radius: 20px;
+  position: absolute;
+
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%; /* Adjust the width as needed */
+  max-height: 30px;
+  text-align: center;
+  padding: 10px;
+  cursor: pointer;
+  line-height: 10px;
 }
 
 .card.m-2 h3 {
