--- a/client/src/styles/homepage.css
+++ b/client/src/styles/homepage.css
@@ -1,3 +1,9 @@
+.filter.btn {
+  border: 1px solid black;
+  width: 200px;
+  align-items: center;
+}
+
 .category.card-title {
   font-size: 14px;
 }
@@ -110,8 +116,9 @@
   position: fixed;
   top: 0;
   max-width: 100%;
-  height: 100%;
+  max-height: 86%;
   overflow-y: scroll;
+  overflow: auto;
 }
 
 .card-title {
@@ -286,6 +293,7 @@
 
 .d-flex.flex-column {
   margin-top: 10px;
+  margin-left: 50px;
 }
 
 .img-fluid {
@@ -315,6 +323,5 @@
 }
 
 .filter-container {
-  display: flex;
-  /* Set other desktop styles here */
+  overflow: auto;
 }
