--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,56 +1,62 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400&display=swap");
 
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: 0;
 }
 
-.navbar{
-  font-family: 'Poppins', sans-serif;
+.navbar {
+  font-family: "Poppins", sans-serif;
   font-size: 17px;
   line-height: 26px;
   text-transform: uppercase;
   box-shadow: 0 8px 6px -6px gray;
-  --webkit-box-shadow:0 8px 6px -6px gray;
+  --webkit-box-shadow: 0 8px 6px -6px gray;
   border-bottom: 0px solid gray !important;
 }
 
-.nav-link{
+.nav-link {
   font-weight: 300 !important;
 }
 
-.active{
+.active {
   border-bottom: 2px solid black;
 }
 
-.user.nav-link.dropdown-toggle.active{
- border-bottom: 0px;
+.user.nav-link.dropdown-toggle.active {
+  border-bottom: 0px;
 }
 
-.navbar-brand{
+.navbar-brand {
   font-weight: 700;
-  font-family: 'roboto',sans-serif;
+  font-family: "roboto", sans-serif;
   letter-spacing: 3px;
 }
 
-.footer{
+.footer {
   color: white;
   padding: 25px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  height: 7px;
 }
 
-.footer a{
+.footer a {
   text-decoration: none;
   color: black;
   padding: 10 px;
 }
 
-.footer a:hover{
+.footer a:hover {
   color: grey;
   border-bottom: 1px solid grey;
 }
 
-.pnf{
+.pnf {
   display: flex;
   min-height: 65vh;
   flex-direction: column;
@@ -58,16 +64,16 @@
   justify-content: center;
 }
 
-.pnf-title{
+.pnf-title {
   font-size: 100px;
   font-weight: 700;
 }
 
-.pnf-heading{
+.pnf-heading {
   font-weight: normal;
 }
 
-.pnf-btn{
+.pnf-btn {
   color: black;
   border: 1px solid black;
   text-decoration: none;
@@ -75,7 +81,7 @@
   margin-top: 10px;
 }
 
-.pnf-button:hover{
+.pnf-button:hover {
   background-color: black;
   color: white;
 }
@@ -89,7 +95,7 @@
   justify-content: center;
 }
 
-.privacy{
+.privacy {
   max-width: 800px; /* Adjust this value to your preferred width */
   margin: 0 auto;
   padding: 20px; /* Adjust this value to control the spacing from the borders */
@@ -97,7 +103,7 @@
   background-color: #f9f9f9;
 }
 
-.about{
+.about {
   max-width: 800px; /* Adjust this value to your preferred width */
   margin: 0 auto;
   padding: 20px; /* Adjust this value to control the spacing from the borders */
@@ -105,7 +111,7 @@
   background-color: #ffffff;
 }
 
-.register{
+.register {
   display: flex;
   align-items: center;
   justify-content: center;
