--- a/client/src/styles/homepage.css
+++ b/client/src/styles/homepage.css
@@ -190,6 +190,7 @@
   align-items: center;
   width: 300px;
   border: 1px solid #ccc;
+  height: 300px;
   border-radius: 5px;
   padding: 10px;
   margin: 10px;
@@ -198,7 +199,7 @@
 }
 
 .card.m-2 .card-title {
-  font-size: 14px;
+  font-size: 15px;
   margin: 0;
 }
 
@@ -225,20 +226,19 @@
   color: #fff;
   padding: 10px;
   opacity: 0;
-  transition: top 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  transition: top 0.3s ease-in-out, opacity 0.4s ease-in-out;
 }
 
-.card.m-2 .btn-more.btn-dark.ms-1,
-.card.m-2 .btn-more.btn-info.ms-1 {
+.card.m-2 .btn-more.btn-dark.ms-1 {
   border-radius: 20px;
   position: absolute;
 
   left: 50%;
   transform: translateX(-50%);
-  width: 70%; /* Adjust the width as needed */
-  max-height: 22px;
+  width: 70%;
+
   text-align: center;
-  padding: 10px;
+  height: 32px;
   cursor: pointer;
   line-height: 4px;
 }
@@ -267,7 +267,7 @@
 
 .loadmore {
   width: 100%;
-  background-color: #3498db;
+
   color: #fff;
   padding: 10px;
   border: none;
