--- a/client/src/styles/homepage.css
+++ b/client/src/styles/homepage.css
@@ -1,3 +1,43 @@
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  position: fixed;
+  background-color: #fefefe;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  border: 1px solid #888;
+  width: 100%;
+  max-width: 500px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .author.card.m-2 .btn.btn-dark.ms-1 {
   height: 30px;
   width: 130px;
@@ -372,4 +412,80 @@
 
 .filter-container {
   overflow: auto;
+}
+
+.recycle-main-div {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center;
+  align-items: center; */
+  padding: 100px 100px 100px 100px;
+  /* background-color: #f8ffe5; */
+  background-color: #ffffff;
+  overflow: scroll;
+  /* align-content: center; */
+  flex-wrap: nowrap;
+  gap: 60;
+  position: absolute;
+  border-radius: 0px 0px 0px 0px;
+}
+
+.header.recycle {
+  margin-left: 40px;
+  font-family: "Gloock", "Gloock Placeholder", serif;
+}
+
+.header.recycle .h1 {
+  width: 100%;
+  height: auto;
+
+  /* max-width: 1000px; */
+  overflow: visible;
+  font-style: normal;
+
+  color: #000000;
+  font-size: 48px;
+}
+
+.container.recycle {
+  display: flex;
+  margin: 20px;
+}
+
+.left.recycle {
+  flex: 1;
+}
+
+.right.recycle {
+  flex: 1;
+
+  align-items: center;
+  align-content: center;
+}
+
+.recycle-img {
+  margin-top: 40px;
+  flex: 1;
+  width: 400px;
+  height: 460px;
+  display: block;
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+  mix-blend-mode: luminosity;
+  overflow: hidden;
+  aspect-ratio: 0.9779951100244498 / 1;
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  border-radius: 40px;
+  transition: transform 0.3s;
+}
+
+.recycle-img:hover {
+  transform: scale(1.05);
 }
