--- a/client/src/styles/homepage.css
+++ b/client/src/styles/homepage.css
@@ -423,8 +423,8 @@
   /* justify-content: center;
   align-items: center; */
   padding: 100px 100px 100px 100px;
-  /* background-color: #f8ffe5; */
-  background-color: #ffffff;
+  background-color: #f8ffe5;
+  /* background-color: #ffffff; */
   overflow: scroll;
   /* align-content: center; */
   flex-wrap: nowrap;
