--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,4 +1,4 @@
-.home-header {
+.row.container.home-header {
   position: fixed;
   top: 0;
   right: 0;
@@ -7,9 +7,9 @@
   background-color: #780000;
 }
 
-.col-md-6.custom-width h1 {
-  /* margin-top: 400px; */
-  z-index: 1;
+.col-md-6.custom-width.h1 {
+  margin-top: 400px;
+
   font-weight: 700;
   font-style: normal;
   font-family: "Syne", "Syne Placeholder", sans-serif;
