--- a/client/src/styles/homepage.css
+++ b/client/src/styles/homepage.css
@@ -384,11 +384,6 @@
   margin-left: 30px;
 }
 
-.img-fluid {
-  margin-left: 100px;
-  margin-top: 10px;
-}
-
 .search.text-center {
   margin-top: 80px;
 }
@@ -566,6 +561,23 @@
 }
 
 .col-md-3.filters-new:hover {
-  transform: scale(1.01); /* Scale the element on hover */
+  transform: scale(1); /* Scale the element on hover */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a box shadow on hover */
+}
+
+.row.container.product-details {
+  margin-top: 80px;
+}
+
+.row.container.product-details {
+  height: 400px;
+}
+
+.img-fluid {
+  margin-left: 100px;
+  margin-top: 10px;
+  width: 280px;
+  max-height: 85%;
+  height: 380px;
+  margin-right: 200px;
 }
