--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,14 +10,15 @@
   font-family: "Poppins", sans-serif;
   font-size: 17px;
   line-height: 26px;
-  text-transform: uppercase;
-  color: #ffffff;
-  background-color: #ffffff;
-  /* box-shadow: 0 8px 6px -6px gray;
-  --webkit-box-shadow: 0 8px 6px -6px gray;
-  border-bottom: 0px solid gray !important; */
+  /* 
+  color: white !important;
+  background-color: white !important; */
 }
 
+/* .navbar.navbar-expand-lg.bg-body-tertiary {
+  color: transparent !important;
+  background-color: transparent !important;
+} */
 .nav-link {
   font-weight: 300 !important;
 }
