--- a/client/src/styles/homepage.css
+++ b/client/src/styles/homepage.css
@@ -403,6 +403,10 @@
 
 .row.privacy {
   margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .filter-container {
