--- a/client/src/styles/responsive.css
+++ b/client/src/styles/responsive.css
@@ -109,7 +109,7 @@
     cursor: pointer;
   }
 
-  .navbar.filter button:not(:last-child) {
+  /* .navbar.filter button:not(:last-child) {
     border-right: 1px solid rgb(0, 0, 0);
   }
   .navbar.filter p,
@@ -125,7 +125,7 @@
 
   .navbar.filter p {
     font-weight: bold;
-  }
+  } */
   .navbar.filter button:hover {
     background-color: rgb(163, 156, 156);
   }
