--- a/client/src/styles/homepage.css
+++ b/client/src/styles/homepage.css
@@ -590,3 +590,14 @@
   margin-top: 10px;
   overflow-y: scroll;
 }
+
+.rectangular-box {
+  margin-top: 70px;
+  border: 1px solid grey;
+  background-color: #fff;
+  padding: 20px;
+  width: 100%;
+  border-radius: 5px;
+  text-align: center;
+  background-color: #efeded;
+}
