--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -25,6 +25,12 @@ body {
   height: 600px;
 }
 
+#div1no {
+  /* background-color: #ffffff; */
+  background-color: #eef0eb;
+  height: 600px;
+}
+
 #div2 {
   height: 600px;
   background-color: rgb(0, 0, 0);
@@ -280,7 +286,6 @@ border-radius: 9999px;
 .container.next p:hover {
   color: rgb(78, 76, 76);
 }
-
 @media only screen and (max-width: 768px) {
   .bigimg {
     display: none;
